Added media query for portrait orientation

--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@
     flex-wrap: wrap;
 }
 
-
 .form-div{
     /* width: 50%; */
     padding: 10px;
@@ -22,11 +21,16 @@
     width: 100%;
 }
 
-
 @media only screen and (max-width: 600px) {
     .flex-container{
         flex-direction: column;
     }
-    
+  
+}
+
+@media (orientation: portrait){
+    .flex-container{
+        flex-direction: column;
+    }
 }
 
