--- a/style.css
+++ b/style.css
@@ -1,36 +1,76 @@
+* {
+    margin: 0px;
+    padding: 0px;
+    max-width: 100%;
+    box-sizing: border-box;
+}
 
-.flex-container{
-    display: flex;
-    justify-content: center;
-    width: 100%;
+html, body{
+    height: 100%;
+}
+
+body{
+    background: url(https://images.unsplash.com/photo-1512733596533-7b00ccf8ebaf?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1032&q=80);
+    background-repeat: no-repeat;
+    background-size: 100%;
+    background-attachment: fixed;
+    background-size: cover;
+}
+
+#main{
+    margin: auto;
+    /*background-image: linear-gradient(black, black, white);*/
+    height: 100%;
+    background: rgba(255,255,255,0.7);
+}
+
+#title{
+        text-align: center;
+        color: white;
+        padding: 10px;
+        background: black;
+}
+
+#description{
+    color: white;
+    text-align: center;
+    background: black;
     padding: 10px;
-    flex-wrap: wrap;
 }
 
 .form-div{
     /* width: 50%; */
+    display: flex;
+    justify-content: center;
+    /*text-align: center;*/
     padding: 10px;
-    flex: 1;
+    height: 70%;
+
 }
 
-.info-div{
-    flex: 1;
-}
-
-.name-group .email-group .number-group{
+.name-group .email-group .number-group .level-dropdown-group .text-area-group{
     width: 100%;
 }
 
-@media only screen and (max-width: 600px) {
-    .flex-container{
-        flex-direction: column;
-    }
-  
+label, input, button{
+    padding: 10px 0px 10px 0px;
+    height: 30px;
+    border-radius: 5px;
 }
 
-@media (orientation: portrait){
-    .flex-container{
-        flex-direction: column;
-    }
+#submit{
+    width: 100%;
+    height: 20px;
+    color: white;
+    background-color: black;
+    border-radius: 5px;
 }
 
+
+/*Black background attribution:
+ <a href="https://pngtree.com/free-backgrounds'">free background photos from Pngtree.com</a>*/
+ /* Piano Key close up Photo by <a href="https://unsplash.com/@jplenio?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Johannes Plenio</a> on <a href="https://unsplash.com/?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+  */
+
+/*Piano slant Photo by <a href="https://unsplash.com/@adkrob?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Rob Martinez</a> on <a href="https://unsplash.com/?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+  */
