--- a/style.css
+++ b/style.css
@@ -5,12 +5,13 @@
     box-sizing: border-box;
 }
 
+/*
 html, body{
     height: 100%;
-}
+}*/
 
 body{
-    background: url(https://images.unsplash.com/photo-1512733596533-7b00ccf8ebaf?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1032&q=80);
+    background: url(https://w0.peakpx.com/wallpaper/146/636/HD-wallpaper-piano-keys-bokeh-piano-playing.jpg);
     background-repeat: no-repeat;
     background-size: 100%;
     background-attachment: fixed;
@@ -18,10 +19,9 @@ body{
 }
 
 #main{
-    margin: auto;
+    margin: 0px auto auto auto;
     /*background-image: linear-gradient(black, black, white);*/
     height: 100%;
-    background: rgba(255,255,255,0.7);
 }
 
 #title{
@@ -43,26 +43,74 @@ body{
     display: flex;
     justify-content: center;
     /*text-align: center;*/
-    padding: 10px;
-    height: 70%;
-
+    margin: auto;
+    border-radius: 20px 0px 0px 0px;
+    padding: 20px 10px 20px 10px;
+    height: 100%;
+    width: 40%;
+    background-color: RGBA(255,255,255,0.9);
 }
 
-.name-group .email-group .number-group .level-dropdown-group .text-area-group{
-    width: 100%;
+form{
+    height: 100%;
 }
 
-label, input, button{
-    padding: 10px 0px 10px 0px;
+input{
+    margin-right: 20px;
+}
+
+label, #preferred-label, #goals-label, #textArea {
+    margin-left: 20px;
+}
+
+#name-label, #number-label, #email-label, #piano-level-label, #preferred-label, #goals-label, #multitext-label{
+    font-weight: bold;  
+}
+
+#name, #email, #number, #playing-level-dropdown{
+    float: right;
+    width: 60%;
     height: 30px;
     border-radius: 5px;
+    display: inline;
+    padding: 0px 10px 0px 10px;
 }
+
+#textArea{
+    border-radius: 5px;
+    display: inline;
+    padding: 0px 10px 0px 10px;
+    border-width: 2px;
+}
+
+#goals-sub-label, #goals-label{
+    display:inline-block;
+}
+
+#playing-level-dropdown{
+    width: 40%;
+}
+
+.input-radio, .input-checkbox {
+  display: inline-block;
+  margin-right: 10px;
+  min-height: 20px;
+  min-width: 20px;
+  vertical-align: middle;
+}
+
+.radio-label{
+    padding: 5px 0px 5px 0px;
+}
+
 
 #submit{
     width: 100%;
-    height: 20px;
+    height: 40px;
     color: white;
-    background-color: black;
+    font-weight: bolder;
+    font-size: 18px;
+    background-color: rgb(14, 145, 14);
     border-radius: 5px;
 }
 
